search appointment changed validation 4

--- a/app/src/main/res/layout/activity_appointment_acknowledgement.xml
+++ b/app/src/main/res/layout/activity_appointment_acknowledgement.xml
@@ -216,27 +216,29 @@
             >
 
             <TextView
-                android:id="@+id/tv_log"
+                android:id="@+id/tv_org"
                 android:layout_width="wrap_content"
                 android:layout_height="30dp"
                 android:gravity="left|center"
-                android:text="@string/Location"
+                android:text="@string/orginzatrion"
+                android:textStyle="bold"
                 android:textSize="@dimen/font_size" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-
+                android:textStyle="bold"
                 android:gravity="left"
+                android:layout_marginRight="5dp"
                 android:text=":" />
 
             <TextView
-                android:id="@+id/tv_locName"
+                android:id="@+id/tv_orgName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="left|center"
-
+                android:textStyle="bold"
 
                 android:textSize="@dimen/font_size" />
         </TableRow>
@@ -249,9 +251,7 @@
             android:id="@+id/tv_address_label"
             android:layout_width="wrap_content"
             android:layout_height="30dp"
-
             android:gravity="left|center"
-
             android:text="@string/service"
             android:textSize="@dimen/font_size" />
 
@@ -271,6 +271,35 @@
 
             android:textSize="@dimen/font_size" />
     </TableRow>
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            >
+
+            <TextView
+                android:id="@+id/tv_provider"
+                android:layout_width="wrap_content"
+                android:layout_height="30dp"
+                android:gravity="left|center"
+                android:text="@string/select_provider"
+                android:textSize="@dimen/font_size" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+
+                android:gravity="left"
+                android:text=":" />
+
+            <TextView
+                android:id="@+id/tv_provider_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="left|center"
+
+                android:textSize="@dimen/font_size" />
+        </TableRow>
         <TableRow
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -354,17 +383,19 @@
         android:layout_height="wrap_content"
         android:padding="5dp"
         android:background="@drawable/rounded_corner">
+
+
         <TableRow
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             >
 
             <TextView
-                android:id="@+id/tv_org"
+                android:id="@+id/tv_log"
                 android:layout_width="wrap_content"
                 android:layout_height="30dp"
                 android:gravity="left|center"
-                android:text="@string/orginzatrion"
+                android:text="@string/Location"
                 android:textStyle="bold"
                 android:textSize="@dimen/font_size" />
 
@@ -373,16 +404,16 @@
                 android:layout_height="wrap_content"
                 android:textStyle="bold"
                 android:gravity="left"
-                android:layout_marginRight="5dp"
                 android:text=":" />
 
             <TextView
-                android:id="@+id/tv_orgName"
+                android:id="@+id/tv_locName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:gravity="left|center"
                 android:textStyle="bold"
+                android:gravity="left|center"
+
 
                 android:textSize="@dimen/font_size" />
         </TableRow>
