--- a/app/src/main/res/layout/activity_appointment_details.xml
+++ b/app/src/main/res/layout/activity_appointment_details.xml
@@ -73,8 +73,8 @@
 
                     <TextView
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:gravity="left"
+                        android:layout_height="match_parent"
+                        android:gravity="left|center"
                         android:text=":"
 
                         android:textStyle="bold" />
@@ -109,8 +109,8 @@
 
                     <TextView
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:gravity="left"
+                        android:layout_height="match_parent"
+                        android:gravity="left|center"
                         android:layout_marginRight="5dp"
                         android:text=":"
                         />
@@ -141,9 +141,8 @@
 
                     <TextView
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-
-                        android:gravity="left"
+                        android:layout_height="match_parent"
+                        android:gravity="left|center"
                         android:text=":" />
 
                     <TextView
@@ -173,8 +172,8 @@
 
                     <TextView
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:gravity="left"
+                        android:layout_height="match_parent"
+                        android:gravity="left|center"
                         android:text=":" />
 
                     <TextView
@@ -197,20 +196,22 @@
                         android:layout_height="30dp"
                         android:gravity="left|center"
                         android:text="@string/orginzatrion"
+                        android:textStyle="bold"
                         android:textSize="@dimen/font_size" />
 
                     <TextView
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_height="match_parent"
+                        android:gravity="left|center"
                         android:textStyle="bold"
-                        android:gravity="left"
+
                         android:layout_marginRight="5dp"
                         android:text=":" />
 
                     <TextView
                         android:id="@+id/tv_orgName"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_height="match_parent"
                         android:layout_weight="1"
                         android:gravity="left|center"
                         android:textStyle="bold"
@@ -232,20 +233,19 @@
 
                     <TextView
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+
                         android:textStyle="bold"
-                        android:gravity="left"
+                        android:layout_height="match_parent"
+                        android:gravity="left|center"
                         android:layout_marginRight="5dp"
                         android:text=":" />
 
                     <TextView
                         android:id="@+id/tv_provider_name"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_height="match_parent"
                         android:layout_weight="1"
                         android:gravity="left|center"
-                        android:textStyle="bold"
-
                         android:textSize="@dimen/font_size" />
                 </TableRow>
 
@@ -266,15 +266,14 @@
 
                     <TextView
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-
-                        android:gravity="left"
+                        android:layout_height="match_parent"
+                        android:gravity="left|center"
                         android:text=":" />
 
                     <TextView
                         android:id="@+id/tv_service"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_height="match_parent"
                         android:layout_weight="1"
                         android:gravity="left|center"
 
@@ -296,8 +295,8 @@
 
                     <TextView
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:gravity="left"
+                        android:layout_height="match_parent"
+                        android:gravity="left|center"
                         android:text=":"
 
                         android:textStyle="bold" />
@@ -342,13 +341,14 @@
                         android:gravity="left|center"
                         android:textStyle="bold"
                         android:text="@string/Location"
+                        android:layout_marginRight="50dp"
                         android:textSize="@dimen/font_size" />
 
                     <TextView
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_height="match_parent"
 
-                        android:gravity="left"
+                        android:gravity="left|center"
                         android:text=":" />
 
                     <TextView
@@ -357,8 +357,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:gravity="left|center"
-
-
+                        android:textStyle="bold"
                         android:textSize="@dimen/font_size" />
                 </TableRow>
 
@@ -378,8 +377,8 @@
 
                     <TextView
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:gravity="left"
+                        android:layout_height="match_parent"
+                        android:gravity="left|center"
                         android:layout_marginRight="5dp"
                         android:text=":" />
 
@@ -410,9 +409,9 @@
 
                     <TextView
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_height="match_parent"
                         android:textStyle="bold"
-                        android:gravity="left"
+                        android:gravity="left|center"
                         android:layout_marginRight="5dp"
                         android:text=":" />
 
