--- a/app/src/main/res/layout/header_for_home_page.xml
+++ b/app/src/main/res/layout/header_for_home_page.xml
@@ -18,6 +18,7 @@
             android:layout_gravity="center_vertical"
             android:textColor="@color/inside_blue"
             android:gravity="center"
+            android:textAlignment="center"
             android:textStyle="bold"
             android:text="@string/profile"
             android:textSize="15dp"
