--- a/app/src/main/res/layout/activity_appointment_acknowledgement.xml
+++ b/app/src/main/res/layout/activity_appointment_acknowledgement.xml
@@ -396,6 +396,7 @@
                 android:layout_height="30dp"
                 android:gravity="left|center"
                 android:text="@string/Location"
+                android:layout_marginRight="50dp"
                 android:textStyle="bold"
                 android:textSize="@dimen/font_size" />
 
