--- a/app/src/main/res/layout/login_alert.xml
+++ b/app/src/main/res/layout/login_alert.xml
@@ -190,7 +190,7 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight=".49"
-                        android:background="@color/dayName"
+                        android:background="@color/blue"
                         android:text="@string/login"
                         android:textAlignment="center"
                         android:textColor="@android:color/white" />
