--- a/app/src/main/res/layout/activity_appointment_details.xml
+++ b/app/src/main/res/layout/activity_appointment_details.xml
@@ -74,7 +74,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
-                        android:gravity="left|center"
+                        android:gravity="left|top"
                         android:text=":"
 
                         android:textStyle="bold" />
@@ -110,7 +110,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
-                        android:gravity="left|center"
+                        android:gravity="left|top"
                         android:layout_marginRight="5dp"
                         android:text=":"
                         />
@@ -142,7 +142,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
-                        android:gravity="left|center"
+                        android:gravity="left|top"
                         android:text=":" />
 
                     <TextView
@@ -173,7 +173,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
-                        android:gravity="left|center"
+                        android:gravity="left|top"
                         android:text=":" />
 
                     <TextView
@@ -202,7 +202,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
-                        android:gravity="left|center"
+                        android:gravity="left|top"
                         android:textStyle="bold"
 
                         android:layout_marginRight="5dp"
@@ -236,7 +236,7 @@
 
                         android:textStyle="bold"
                         android:layout_height="match_parent"
-                        android:gravity="left|center"
+                        android:gravity="left|top"
                         android:layout_marginRight="5dp"
                         android:text=":" />
 
@@ -267,7 +267,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
-                        android:gravity="left|center"
+                        android:gravity="left|top"
                         android:text=":" />
 
                     <TextView
@@ -296,7 +296,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
-                        android:gravity="left|center"
+                        android:gravity="left|top"
                         android:text=":"
 
                         android:textStyle="bold" />
@@ -348,7 +348,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
 
-                        android:gravity="left|center"
+                        android:gravity="left|top"
                         android:text=":" />
 
                     <TextView
@@ -378,7 +378,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
-                        android:gravity="left|center"
+                        android:gravity="left|top"
                         android:layout_marginRight="5dp"
                         android:text=":" />
 
@@ -411,7 +411,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:textStyle="bold"
-                        android:gravity="left|center"
+                        android:gravity="left|top"
                         android:layout_marginRight="5dp"
                         android:text=":" />
 
@@ -426,35 +426,43 @@
                         android:textSize="@dimen/font_size" />
                 </TableRow>
             </TableLayout>
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    android:layout_marginTop="10dp">
+
 
             <Button
                 android:id="@+id/tv_cancel_appointment"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
+                android:layout_weight="1"
                 android:layout_height="40dp"
                 android:layout_alignParentBottom="true"
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentRight="true"
-                android:layout_marginBottom="5dp"
-            android:layout_marginTop="3dp"
-                android:background="@drawable/button_rounded_corner"
+
+                android:background="@color/upcoming_appointment_count"
                 android:gravity="center"
-                android:text="@string/cancel_appointment"
+                android:text="@string/cancel"
                 android:textColor="@color/inside_blue"
                 android:textSize="@dimen/font_size" />
 
             <Button
                 android:id="@+id/tv_editAppointment"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
+                android:layout_weight="1"
                 android:layout_height="40dp"
                 android:layout_alignParentBottom="true"
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentRight="true"
-                android:layout_marginBottom="7dp"
-                android:background="@drawable/button_rounded_corner"
+
+                android:background="@color/blue"
                 android:gravity="center"
-                android:text="@string/edit_appointment"
+                android:text="@string/edit"
                 android:textColor="@color/inside_blue"
                 android:textSize="@dimen/font_size" />
+</LinearLayout>
 
         </LinearLayout>
     </ScrollView>
