--- a/app/src/main/res/layout/location_service2.xml
+++ b/app/src/main/res/layout/location_service2.xml
@@ -263,7 +263,7 @@
         android:id="@+id/tv_book_appointment"
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:background="@drawable/button_rounded_corner"
+        android:background="@color/blue"
         android:text="@string/booking_app"
         android:textSize="@dimen/font_size"
         android:layout_marginLeft="5dp"
