--- a/app/src/main/res/layout/activity_location_service.xml
+++ b/app/src/main/res/layout/activity_location_service.xml
@@ -33,5 +33,6 @@
     <ListView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/lv_service_type"></ListView>
+        android:id="@+id/lv_service_type"
+        android:choiceMode="multipleChoice"></ListView>
 </LinearLayout>
