--- a/app/src/main/res/layout/location_service2.xml
+++ b/app/src/main/res/layout/location_service2.xml
@@ -9,15 +9,25 @@
     <include layout="@layout/fragment_common_header"
         android:id="@+id/in_headder"
         />
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/in_headder"
 
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:id="@+id/lllll"
+>
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:id="@+id/relativeLayou"
-        android:layout_below="@+id/in_headder"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true">
+      >
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -250,15 +260,17 @@
 
 
     </RelativeLayout>
-    <include layout="@layout/activity_appointement_booking"
+
+    <include
+        android:id="@+id/include2"
+        layout="@layout/activity_appointement_booking"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:id="@+id/include2"
-        android:layout_below="@+id/relativeLayou"
-        android:layout_alignParentLeft="true"
         android:layout_above="@+id/tv_book_appointment"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/relativeLayou"
+        android:layout_marginTop="5dp" />
     <Button
         android:id="@+id/tv_book_appointment"
         android:layout_width="match_parent"
@@ -266,13 +278,17 @@
         android:background="@color/blue"
         android:text="@string/booking_app"
         android:textSize="@dimen/font_size"
+        android:layout_below="@+id/lllll"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
-        android:layout_marginTop="2dp"
+        android:layout_marginTop="5dp"
         android:layout_marginBottom="7dp"
         android:textColor="@color/inside_blue"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
+</LinearLayout>
+    </ScrollView>
+
 
 </RelativeLayout>
