--- a/app/src/main/res/layout/activity_appointement_booking.xml
+++ b/app/src/main/res/layout/activity_appointement_booking.xml
@@ -65,7 +65,8 @@
         <GridView
             android:id="@+id/gv_timeSlots"
             android:layout_width="match_parent"
-            android:layout_height="170dp"
+            android:layout_height="0dp"
+            android:layout_weight=".4"
             android:layout_marginLeft="5dp"
             android:layout_marginRight="5dp"
             android:layout_marginTop="5dp"
