--- a/app/src/main/res/layout/location_service2.xml
+++ b/app/src/main/res/layout/location_service2.xml
@@ -13,13 +13,14 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/in_headder"
-
         android:layout_alignParentLeft="true"
+        android:fillViewport="true"
         android:layout_alignParentStart="true">
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+
     android:id="@+id/lllll"
 >
     <RelativeLayout
@@ -265,7 +266,8 @@
         android:id="@+id/include2"
         layout="@layout/activity_appointement_booking"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        android:layout_weight=".5"
         android:layout_above="@+id/tv_book_appointment"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
@@ -281,7 +283,7 @@
         android:layout_below="@+id/lllll"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="2dp"
         android:layout_marginBottom="7dp"
         android:textColor="@color/inside_blue"
         android:layout_alignParentBottom="true"
