changes image dfgf

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -77,7 +77,7 @@
                 android:layout_height="0dp"
                 android:layout_weight="0.08"
                 android:gravity="left|center"
-                android:text="About"
+                android:text="@string/about"
                 android:textColor="@color/about"
                 android:textSize="@dimen/sub_text"
                 android:textStyle="bold" />
