--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -21,8 +21,9 @@
     <color name="white">#FFFFFF</color>
     <color name="gray">#f2f2f2</color>
 
-    <color name ="popupheader">#00A2E8</color>
+    <color name ="green">#9bcd04</color>
 
+    <color name ="popupheader">#00A2E8</color>
     <color name="blue">#0E68F0</color>
     <color name="inside_blue">#D2FFFF</color>
 
