--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -172,12 +172,13 @@
 
             <TextView
                 android:id="@+id/tv_count_appointments"
-                android:layout_width="wrap_content"
+                android:layout_width="35dp"
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
                 android:background="@color/upcoming_appointment_count"
                 android:gravity="center"
                 android:padding="5dp"
+
                 android:paddingBottom="5dp"
                 android:paddingTop="10dp"
                 android:text="0"
