--- a/app/src/main/res/layout/location_service2.xml
+++ b/app/src/main/res/layout/location_service2.xml
@@ -278,7 +278,7 @@
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:background="@color/blue"
-        android:text="@string/booking_app"
+        android:text="@string/contine"
         android:textSize="@dimen/font_size"
         android:layout_below="@+id/lllll"
         android:layout_marginLeft="5dp"
